--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -1,62 +1,74 @@
-.navbar {
+.Navbar {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    height: 5.5rem;
+    box-sizing: border-box;
 }
 
-.info{
+.info-container{
+    height: 3.5rem;
     display: flex;
+    box-sizing: border-box;
     justify-content: space-between;
+    align-items: center;
     padding: 0.6em;
 }
 
-.info__button{
-    height: 3em;
-    width: 8em;
-    font-size: 0.9em;
+.info-container__button{
+    height: 2rem;
+    width: 8rem;
+    font-size: 0.9rem;
     font-weight: 600;
     color: white;
     background-color: black;
-    border-radius: 0.4em;
+    border-radius: 0.4rem;
 }
 
 .logo{
     display: flex;
     justify-content: space-around;
-    width: 10em;
+    width: 10rem;
 }
 
 .logo__text--blue{
     color: rgb(62, 140, 204);
     font-style: italic;
-    font-size: 2em;
+    font-size: 2rem;
     font-weight: 400;
-    margin: 0em;
+    margin: 0rem;
 }
 
 .logo__text--black{
     font-style: normal;
     font-weight: 500;
     align-self: center;
-    font-size: 1em;
+    font-size: 1rem;
 }
 
-.path{
+.path-container{
+    height: 2rem;
     background-color: var(--lightgrey);
     border-top: 1px solid var(--grey);
     border-bottom: 1px solid var(--grey);
     display: flex;
     justify-content: space-between;
-    padding: 0em 0.6em;
-    
+    padding: 0rem 0.6rem;
+    box-sizing: border-box;
 }
 
-.path p{
-    margin: 0.4em;
+.path-container__path {
+    margin: 0.4rem;
     font-weight: 300;
     white-space: pre-wrap;
 }
 
-.path span{
+.path-container__path span{
     color: var(--grey);
+}
+
+.path-container__language{
+    font-size: 0.9rem;
+    font-weight: 400;
+    margin: 0.4rem;
 }
