--- a/src/styles/NavBar.css
+++ b/src/styles/NavBar.css
@@ -1,9 +1,14 @@
-.Navbar {
+.NavBar {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     height: 5.5rem;
+    background-color: white;
     box-sizing: border-box;
+    z-index: 1;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
 }
 
 .info-container{
@@ -15,6 +20,25 @@
     padding: 0.6em;
 }
 
+.info-container--left{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 25rem;
+}
+
+.info-container--right{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 16rem;
+}
+
+.info-container__question{
+    font-size: 0.9rem;
+    font-weight: 500;
+}
+
 .info-container__button{
     height: 2rem;
     width: 8rem;
@@ -22,7 +46,20 @@
     font-weight: 600;
     color: white;
     background-color: black;
-    border-radius: 0.4rem;
+    border-radius: 0.2rem;
+}
+
+.info-container__link{
+    color: black;
+    text-decoration: none;
+    font-weight: 300;
+    padding: 0.5rem;
+    border-radius: 0.2rem;
+}
+
+.info-container__link:hover{
+    color: var(--highlight);
+    background-color: var(--highlight-bg)
 }
 
 .logo{
