--- a/src/styles/SideBar.css
+++ b/src/styles/SideBar.css
@@ -1,5 +1,5 @@
 .SideBar{
-    width: 20%;
+    width: 25%;
     height: calc(100vh - 5.5rem);
     overflow-y: scroll;
     display: flex;
@@ -7,6 +7,9 @@
     align-items: flex-start;
     padding-left: 1.2em;
     padding-right: 0em;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 5.5rem;
 }
 
 .SideBar__title{
@@ -20,9 +23,11 @@
     font-size: 1rem;
     margin-top: 0.5rem;
     padding-left: 0.5rem;
+    padding-top: 0.5rem;
 }
 
 .SideBar p {
     padding-left: 1rem;
     margin: 0.6rem;
+    font-weight: 300;
 }
