--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,5 +1,10 @@
 .App {
   text-align: center;
+  max-width: 90rem;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .App-logo {
