--- a/src/styles/SectionMenu.css
+++ b/src/styles/SectionMenu.css
@@ -2,7 +2,9 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    width: 15rem;
     height: 50%;
+    margin-top: 3rem;
     position: -webkit-sticky;
     position: sticky;
     top: 5.5rem;
@@ -18,4 +20,8 @@
     padding: 1rem;
     border-left: 2px solid var(--grey);
     font-size: 0.8rem;
+}
+
+.SectionMenu__label:hover{
+    color: var(--blue)
 }
