--- a/src/styles/SideBar.css
+++ b/src/styles/SideBar.css
@@ -1,5 +1,6 @@
 .SideBar{
-    width: 25%;
+    width: 20rem;
+    max-width: 25rem;
     height: calc(100vh - 5.5rem);
     overflow-y: scroll;
     display: flex;
