--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -15,6 +15,8 @@
 .Main__intro{
     text-align: justify;
     line-height: 1.8rem;
+
+    font-weight: 300;
 }
 
 .Main__subtitle{
@@ -103,7 +105,8 @@
 
 .code-demo__output-row__output-box{
     width: 100%;
-    height: 10rem;
+    min-height: 10rem;
+    overflow: auto;
     background-color: var(--lightgrey);
     border: 1px solid var(--grey);
     border-radius: 0.2rem;
@@ -114,6 +117,7 @@
     text-align: justify;
     margin: 0.6rem;
     font-weight: 350;
+    line-height: 1.5rem;
 }
 
 .skills-box{
@@ -128,6 +132,33 @@
     line-height: 2em;
 }
 
+.Main__project-text{
+    margin-left: 2rem;
+    text-align: justify;
+    font-weight: 300;
+}
 
+.Main__project-text__link{
+    color: var(--blue);
+}
 
+.Main__project-text__link:hover{
+    text-decoration: none;
+}
+
+.experience__title{
+    font-weight: 400;
+}
+
+.experience__text{
+    font-weight: 300;
+    text-align: justify;
+}
+
+.experience__details{
+    width: 100%;
+    text-align: justify;
+    padding: 0rem 1rem;
+    margin-bottom: 3rem;
+}
 
