--- a/src/styles/NavBar.css
+++ b/src/styles/NavBar.css
@@ -62,6 +62,10 @@
     border-radius: 0.2rem;
 }
 
+.info-container__button:hover{
+    background-color: rgb(46, 46, 45);
+}
+
 .info-container__link{
     color: black;
     text-decoration: none;
