--- a/src/styles/SectionMenu.css
+++ b/src/styles/SectionMenu.css
@@ -16,6 +16,8 @@
 }
 
 .SectionMenu__label{
+    color: black;
+    text-decoration: none;
     margin: 0rem;
     padding: 1rem;
     border-left: 2px solid var(--grey);
