--- a/src/styles/SideBar.css
+++ b/src/styles/SideBar.css
@@ -1,5 +1,5 @@
 .SideBar{
-    width: 20rem;
+    min-width: 20 rem;
     max-width: 25rem;
     height: calc(100vh - 5.5rem);
     overflow-y: scroll;
@@ -27,8 +27,15 @@
     padding-top: 0.5rem;
 }
 
-.SideBar p {
+.SideBar__link {
     padding-left: 1rem;
     margin: 0.6rem;
     font-weight: 300;
+    color: black;
+    text-decoration: none;
+    display: flex;
+}
+
+.SideBar__link:hover {
+    text-decoration: underline;
 }
