--- a/src/styles/NavBar.css
+++ b/src/styles/NavBar.css
@@ -70,7 +70,8 @@
 }
 
 .info-container__button:hover{
-    background-color: rgb(46, 46, 45);
+    background-color: rgb(95, 95, 86);
+    cursor: pointer;
 }
 
 .info-container__link{
