--- a/src/styles/SideBar.css
+++ b/src/styles/SideBar.css
@@ -34,6 +34,10 @@
     padding-top: 0.5rem;
 }
 
+.SideBar__subtitle:hover{
+    cursor: pointer;
+}
+
 .SideBar__link {
     padding-left: 1rem;
     margin: 0.6rem;
@@ -41,8 +45,14 @@
     color: black;
     text-decoration: none;
     display: flex;
+    margin-bottom: 1.2rem;
 }
 
 .SideBar__link:hover {
     text-decoration: underline;
+}
+
+.SideBar__List--hidden{
+    visibility: hidden;
+    position:absolute;
 }
