--- a/src/styles/NavBar.css
+++ b/src/styles/NavBar.css
@@ -38,14 +38,15 @@
     align-items: center;
     justify-content: space-between;
     width: 50%;
+    max-width: 25rem;
 }
 
 .info-container--right{
     display: flex;
     align-items: center;
     justify-content: space-around;
-    width: 25%;
-    min-width: 6.5rem;
+    width: 40%;
+    max-width: 18rem;
 }
 
 .info-container__question{
@@ -54,6 +55,10 @@
 }
 
 @media only screen and (max-width: 770px) {
+    .info-container--right{
+        width: 25%;
+    }
+
     .info-container__question {
         display: none;
     }
@@ -68,6 +73,12 @@
     background-color: black;
     border-radius: 0.2rem;
 }
+
+@media only screen and (max-width: 770px) {
+    .info-container__button{
+        font-size: 0.8rem;
+    }
+  }
 
 .info-container__button:hover{
     background-color: rgb(95, 95, 86);
@@ -87,7 +98,7 @@
     background-color: var(--highlight-bg)
 }
 
-@media only screen and (max-width: 570px) {
+@media only screen and (max-width: 580px) {
     .info-container__link {
       display: none;
     }
