fix responsiveness issues in main

--- a/src/styles/CodeDemo.css
+++ b/src/styles/CodeDemo.css
@@ -10,7 +10,7 @@
     margin: 0rem;
     padding: 0.5rem 0.5rem 0.5rem 1rem;
     border-radius: 0.2rem 0.2rem 0rem 0rem;
-    text-align: justify;
+    text-align: left;
 }
 
 .code-demo__body{
