--- a/src/styles/SideBar.css
+++ b/src/styles/SideBar.css
@@ -1,20 +1,25 @@
 .SideBar{
-    min-width: 18rem;
-    max-width: 20rem;
+    background-color: white;
     height: calc(100vh - 5.5rem);
     overflow-y: scroll;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    padding-left: 1.2em;
-    padding-right: 0em;
+    padding-left: 1.2rem;
+    padding-right: 0rem;
     position: -webkit-sticky;
     position: sticky;
     top: 5.5rem;
+    z-index: 3;
+    max-width: 15rem;
+}
+
+.responsive{
+    max-width: 20rem;
 }
 
 @media only screen and (max-width: 910px) {
-    .SideBar{
+    .responsive{
         display: none;
     }
   }
@@ -52,6 +57,5 @@
 }
 
 .SideBar__List--hidden{
-    visibility: hidden;
-    position:absolute;
+    display: none;
 }
