--- a/src/styles/SectionMenu.css
+++ b/src/styles/SectionMenu.css
@@ -4,7 +4,6 @@
     align-items: flex-start;
     width: 15rem;
     height: 50%;
-    margin-bottom: 3rem;
 }
 
 .responsive{
@@ -14,7 +13,13 @@
 }
 
 @media only screen and (max-width: 1200px) {
-    .responsive{
+    .SectionMenu.responsive{
+        display: none;
+    }
+  }
+
+  @media only screen and (min-width: 1200px) {
+    .SectionMenu.static{
         display: none;
     }
   }
