--- a/src/styles/SideBar.css
+++ b/src/styles/SideBar.css
@@ -1,5 +1,5 @@
 .SideBar{
-    background-color: white;
+    /* background-color: white; */
     height: calc(100vh - 5.5rem);
     overflow-y: scroll;
     display: flex;
@@ -12,6 +12,7 @@
     top: 5.5rem;
     z-index: 3;
     max-width: 15rem;
+    width: 100%;
 }
 
 .responsive{
@@ -27,7 +28,7 @@
 .SideBar__title{
     padding-top: 2rem;
     font-size: 1.3rem;;
-    font-weight: 300;
+    font-weight: 400;
 }
 
 .SideBar__subtitle{
