--- a/src/styles/CodeDemo.css
+++ b/src/styles/CodeDemo.css
@@ -24,15 +24,14 @@
 
 .code-demo__body__code-field{
     overflow-x: auto;
-    line-height: 2rem;
     white-space: pre;
-    text-align: justify;
+    text-align: left;
     padding: 0.5rem;
 }
 
 .code-demo__body__code-field p{
     min-width: 22rem;
-    margin: 0.1rem;
+    margin: 0rem;
     line-height: 1.5rem;
     font-weight: 350;
     overflow-x: auto;
@@ -49,8 +48,9 @@
 }
 
 .code-demo__body__number-column p{
-    margin: 0.1rem;
+    margin: 0rem 0.4rem 0rem 0rem;
     font-weight: 350;
+    line-height: 1.5rem;
 }
 
 .code-demo__output-row{
