--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -8,6 +8,10 @@
     box-sizing: border-box;
 }
 
+.Main p {
+    line-height: 1.8rem;
+}
+
 .Main__title{
     font-size: 2.5rem;
     font-weight: 500;
@@ -18,7 +22,7 @@
 
 .Main__intro{
     text-align: left;
-    line-height: 1.8rem;
+   
 
     font-weight: 300;
 }
