--- a/src/styles/code.css
+++ b/src/styles/code.css
@@ -18,4 +18,6 @@
 .code-background{
     background-color: var(--codegrey);
     font-weight: 400;
+    font-family: monospace;
+    font-size: 0.9rem;
 }
