--- a/src/styles/SideBar.css
+++ b/src/styles/SideBar.css
@@ -39,6 +39,14 @@
     padding-top: 0.5rem;
 }
 
+.Sidebar__expand-button{
+    border: none;
+    background-color: white;
+    font-size: large;
+    margin: 0;
+    padding: 0;
+}
+
 .SideBar__subtitle:hover{
     cursor: pointer;
 }
